<resources>
    <string name="app_name">kadai12</string>
    <string name="tv_title">必要な情報を入力してください</string>
    <string name="tv_name">名前</string>
    <string name="tv_main">タイトル</string>
    <string name="tv_mail">メールアドレス</string>
    <string name="tv_comment">質問内容</string>
    <string name="bt_confirm">確認</string>
    <string name="bt_send">送信</string>
    <string name="bt_clear">クリア</string>
    <string name="dialog_title">確認</string>
    <string name="dialog_msg">送信します。よろしいですか。</string>
    <string name="dialog_btn_ok">はい</string>
    <string name="dialog_btn_no">いいえ</string>
    <string name="dialog_btn_ok_toast">送信します。</string>
    <string name="dialog_btn_no_toast">送信取り消しします。</string>
</resources>